tests/var_infer_void_bad.stderr
tests/var_infer_void_bad.sl:5:10: error: SL2027: cannot infer type from expression with no value
