tests/var_infer_void_bad.sl
fn noop() {}

fn example() {
	var x = noop()
	_ = x
}
